remove robots.txt

--- a/about/index.html
+++ b/about/index.html
@@ -115,7 +115,7 @@ MathJax.Hub.Config({
 <span class="marginnote"> <img src="/img/Institute_of_Actuaries.jpg" alt="">  The version of the Institute of Actuaries crest in use since 1956 until 2010. The wavy lines on the arms and the crest are supposed to represent &ldquo;mathematical analysis&rdquo;! </span></p>
 <p>I&rsquo;m Dimitri Semenovich, an AI researcher and actuary working at the intersection of AI, causal inference, and insurance.
 Currently, I lead pricing, personalisation and AI at Cover Genius, a series D startup providing insurance solutions to customers of leading ecommerce platforms like Booking Holdings, Uber, and Amazon.</p>
-<p>Previously, I spent six years at Insurance Australia Group, where I&rsquo;ve developedreal-time machine learning models for risk pricing and worked on various AI and analytics initiatives.</p>
+<p>Previously, I spent six years at Insurance Australia Group, where I&rsquo;ve developed real-time machine learning models for risk pricing and worked on various AI and analytics initiatives.</p>
 <h2 id="education--credentials">Education &amp; Credentials</h2>
 <ul>
 <li>PhD in Computer Science (Mathematical optimization in machine learning), UNSW</li>
@@ -132,7 +132,7 @@ Currently, I lead pricing, personalisation and AI at Cover Genius, a series D st
 </ul>
 <h2 id="professional-activities">Professional Activities</h2>
 <p>I currently serve as a Board Member of the ASTIN Section of the International Actuarial Association and as Chair of its Scientific Committee. I&rsquo;m also a Research Fellow at the Gradient Institute, working on bridging the gap between algorithmic/AI fairness and actuarial practice.</p>
-<p>If you&rsquo;re interested in chatting about any of these topics or potential collaborations, feel free to reach out at dv<remove><a href="mailto:semenovich@gmail.com">semenovich@gmail.com</a>.</p>
+<p>If you&rsquo;re interested in chatting about any of these topics or potential collaborations, feel free to reach out at <a href="mailto:dvremovesemenovich@gmail.com">dvremovesemenovich@gmail.com</a>.</p>
 </section>
             <section>
                 <nav class="menu" style="margin-top:0rem">
